@@ -1,3 +1,10 @@
+Mon Dec 12 13:23:29 GMT 2011  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* tests/soaktest/soaktest.cc,tests/soaktest/soaktest.h,
+	  tests/soaktest/soaktest_queries.cc: "boulton" -> "Boulton" in
+	  copyright statements.
+
 Mon Dec 12 13:16:17 GMT 2011  Olly Betts <olly@survex.com>
 
 	* Backport change from trunk:
